# Vibe-Shield

./: .gitignore  .prettierignore  ADDENDUM_TO_BUILD.md  BUILD_PLAN.md  BUILD_REPORT_v1.0.0.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  UI-Build-Addendum.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  ruff.toml
.appliance/: README.md  manifest.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  compliance-question.yml  config.yml  recognizer-miss.yml
.github/workflows/: ci.yml  release.yml
appliance/: INSTALL.md  caddy.snippet  docker-compose.fragment.yml  env.example
apps/admin/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
apps/admin/docker-entrypoint.d/: 40-base-path.sh
apps/admin/src/: App.tsx  api.ts  main.tsx  styles.css
apps/admin/src/views/: AnthropicProbeView.tsx  ApiKeysView.tsx  AuditView.tsx  LoginGate.tsx  PoliciesView.tsx  PromptsView.tsx  RecognizerMissesView.tsx  RedactView.tsx  ScanView.tsx  ScheduledScansView.tsx  Sidebar.tsx  UsersView.tsx
apps/admin/tests/: api-base-url.test.ts  api.test.ts
apps/engine/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/engine/app/: __init__.py  analyzer.py  config.py  errors.py  logging.py  main.py  metrics.py  middleware.py  schemas.py
apps/engine/app/backstops/: __init__.py  base.py  credit_card.py  ein.py  email.py  layer.py  phone.py  routing.py  ssn.py
apps/engine/app/image/: __init__.py  barcode_detector.py  face_detector.py  masker.py  ocr_tesseract.py  pipeline.py
apps/engine/app/recognizers/: __init__.py  aba_routing.py  bank_account.py  business_name.py  deconflict.py  dob.py  drivers_license.py  ein.py  itin.py  protected_ranges.py  whitelists.py
apps/engine/app/scan/: __init__.py  archive_scanner.py  base.py  email_scanner.py  image_pdf_scanner.py  office_scanner.py  pdf_text_scanner.py  text_scanner.py
apps/engine/app/tokenizer/: __init__.py  deterministic.py
apps/engine/tests/: conftest.py  test_analyze.py  test_backstop_credit_card.py  test_backstop_ein.py  test_backstop_email.py  test_backstop_layer.py  test_backstop_phone.py  test_backstop_routing.py  test_backstop_ssn.py  test_dataclass_repr.py  test_deconflict.py  test_error_responses.py  test_health.py  test_image_backends_v1_1.py  test_image_redaction.py  test_logging.py  test_protected_ranges.py  test_recognizer_aba_routing.py  test_recognizer_bank_account.py  test_recognizer_business_name.py  test_recognizer_dob.py  test_recognizer_drivers_license.py  test_recognizer_ein.py  test_recognizer_itin.py  test_recognizers.py  test_redact.py  test_scan.py  test_size_limit.py  test_whitelists.py
apps/engine/tests/fixtures/: synthetic.py
apps/gateway/: Dockerfile  README.md  entrypoint.sh  package.json  tsconfig.json  vitest.config.ts
apps/gateway/src/: app.ts  config.ts  errors.ts  index.ts  logging.ts  metrics.ts  migrate.ts
apps/gateway/src/anthropic/: client.ts  holder.ts  probe.ts  reprobe.ts  types.ts
apps/gateway/src/auth/: cookie.ts  mailer.ts
apps/gateway/src/engine/: client.ts
apps/gateway/src/middleware/: access-log.ts  api-key.ts  correlation-id.ts  correlation-storage.ts  requires.ts  session-auth.ts  size-limit.ts
apps/gateway/src/policy/: bank-whitelist.ts  built-in.ts  reid-policy.ts  resolver.ts  schema.ts
apps/gateway/src/prompts/: README.md  registry.ts
apps/gateway/src/proxy/: orchestrator.ts  redactor.ts  reidentifier.ts  retry.ts  streaming.ts
apps/gateway/src/quota/: rate-limiter.ts  spend-cap.ts  spend-rate-limiter.ts
apps/gateway/src/redact/: bundle.ts  job-events.ts  pipeline.ts  purge-cron.ts  storage.ts
apps/gateway/src/routes/: admin.ts  auth.ts  health.ts  materialize.ts  messages.ts  metrics.ts  openapi.ts  ready.ts  redact.ts  scan.ts  scheduled-scans.ts  sessions.ts
apps/gateway/src/scan/: alerter.ts  cron.ts  file-fetcher.ts  job-events.ts  pipeline.ts  scheduler.ts
apps/gateway/src/schemas/: messages.ts
apps/gateway/src/tenant-key/: resolver.ts
apps/gateway/src/types/: express.d.ts
apps/gateway/tests/: admin-anthropic-key.test.ts  admin-routes.test.ts  anthropic-holder.test.ts  auth.test.ts  bank-whitelist.test.ts  config.test.ts  correlation-id.test.ts  error-envelope.test.ts  health.test.ts  identity-auth.test.ts  materialize.test.ts  messages.test.ts  metrics.test.ts  policy-resolver.test.ts  probe.test.ts  prompt-registry.test.ts  proxy.test.ts  rate-limiter.test.ts  redact.test.ts  reid-policy.test.ts  reprobe.test.ts  retry.test.ts  scan-cron.test.ts  scan.test.ts  sessions.test.ts  setup.ts  spend-cap.test.ts  spend-rate-limiter.test.ts
compliance/: annual-review-checklist.md  encryption.md  engagement-letter-language.md  image-redaction.md  incident-response-runbook.md  peer-review-faq.md  recognizers.md  soc2-mapping.md  wisp-section.md
compliance/integrations/: README.md  vibe-mybooks.md  vibe-tax-research.md  vibe-tb.md  vibe-tx-converter.md
compliance/vendor-due-diligence-binder/: README.md  kisaesdevlab-confidentiality-commitment.md  presidio-license-mit.md
ops/dashboards/: vibe-shield-gateway.json
qa/: recall_precision.py
qa/corpus/synthetic/: __init__.py  bookkeeping.py  statements.py
qa/load/: README.md  engine-redact.js  gateway-messages.js
qa/reports/: baseline-lg.json  baseline-v1.1-lg.json  baseline-v1.1.json  baseline.json
scripts/: check-anthropic-boundary.sh  check-no-anthropic-direct.sh  generate-lockfile.sh
