[project]
name = "vibe-shield-engine"
version = "0.0.0"
description = "Internal-only PII redaction engine. NER + custom CPA recognizers + regex backstops + tokenization."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "PolyForm-Internal-Use-1.0.0" }
# Runtime deps are pinned in Phase 2 (presidio-analyzer, presidio-anonymizer, spacy,
# transformers, fastapi, uvicorn, pydantic). Listed empty here so `uv sync` works
# during Phase 1 verification without pulling the heavyweight NER stack.
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false

[tool.ruff]
extend = "../../ruff.toml"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
exclude = ["tests/fixtures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
