[project]
name = "vibe-shield-engine"
version = "0.1.0"
description = "Internal-only PII redaction engine. NER + custom CPA recognizers + regex backstops + tokenization."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "PolyForm-Internal-Use-1.0.0" }

dependencies = [
    # PII detection / NER
    "presidio-analyzer==2.2.358",
    "presidio-anonymizer==2.2.358",
    "spacy==3.7.5",
    # spaCy 3.7.x ships thinc wheels built against NumPy 1.x; pulling NumPy
    # 2.x triggers an ABI mismatch ("numpy.dtype size changed"). Pin <2
    # until we move to spaCy >=3.8 in a later phase.
    "numpy<2.0",
    # Pinned per BUILD_PLAN.md Phase 2; transformer-based recognizers come online
    # in later phases. No torch/tf backend installed by default — see Dockerfile
    # for the production install variant.
    "transformers==4.46.3",
    # API surface
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    # Observability
    "python-json-logger==3.2.1",
    "prometheus-client==0.21.1",
    # v1.1: image-redaction backends (Phase 17 v1.1).
    # Tesseract OCR via pytesseract — needs the `tesseract-ocr` system
    # package in the runtime image (Dockerfile installs it). pyzbar
    # needs `libzbar0`. opencv-python-headless avoids the X11/GUI deps
    # of the regular `opencv-python` wheel.
    "pillow==11.0.0",
    "pytesseract==0.3.13",
    "opencv-python-headless==4.10.0.84",
    "pyzbar==0.1.9",
    # v1.5: PDF rasterization. Requires poppler-utils in the runtime
    # image (Dockerfile installs it).
    "pdf2image==1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "faker>=33.1",
    "ruff>=0.8",
    "mypy>=1.13",
    # Small spaCy model for the test suite. Production Docker bundles
    # en_core_web_lg instead; declaring sm here keeps `uv sync` enough to
    # run the unit tests without a separate `python -m spacy download` step
    # (uv venvs ship without pip, so spaCy's CLI downloader can't run).
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "qrcode>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false

[tool.ruff]
extend = "../../ruff.toml"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
exclude = ["tests/fixtures"]
# presidio + spacy ship without complete type stubs; treat as untyped imports.
[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*", "spacy.*", "pytesseract.*", "pyzbar.*", "cv2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "requires_model: test needs the configured spaCy model installed",
]
asyncio_mode = "auto"
